--- a/example/index.html
+++ b/example/index.html
@@ -54,6 +54,6 @@
 
 	<!-- js files -->
 	<script type="text/javascript" src="https://code.jquery.com/jquery-1.11.3.min.js"></script>
-	<script type="text/javascript" src="../dist/js/malone.min.js"></script>
+	<script type="text/javascript" src="../dist/js/malonebox.min.js"></script>
 </body>
 </html>
