min-to-tun and max-width feature added

--- a/example/index.html
+++ b/example/index.html
@@ -28,7 +28,9 @@
 			<h2 class="head__subtitle">A simple and fast jQuery lightbox alternative.</h2>
 		</div>
 
-		<ul class="gallery__list">
+		<ul class="gallery__list malonebox-init"
+			data-malonebox-max-width="1200"
+			data-malonebox-min-to-run="500">
 			<li class="gallery__item">
 				<a class="malonebox" href="abstract_01.jpg" title="Image 01">
 					<img class="gallery__img" src="abstract_01.jpg" alt="Image 01">
