options via malonebox-init added

--- a/example/index.html
+++ b/example/index.html
@@ -30,10 +30,14 @@
 
 		<ul class="gallery__list malonebox-init"
 			data-malonebox-max-width="900"
-			data-malonebox-min-to-run="500">
+			data-malonebox-min-to-run="500"
+			data-malonebox-text-close="[X] Close"
+			data-malonebox-text-prev="[<] Prev"
+			data-malonebox-text-next="Next [>]"
+			>
 			<li class="gallery__item">
-				<a class="malonebox" href="abstract_04.jpg" title="Image 01">
-					<img class="gallery__img" src="abstract_04.jpg" alt="Image 01">
+				<a class="malonebox" href="abstract_01.jpg" title="Image 01">
+					<img class="gallery__img" src="abstract_01.jpg" alt="Image 01">
 				</a>
 			</li>
 			<li class="gallery__item">
