README updated to FlizeTeam

--- a/example/index.html
+++ b/example/index.html
@@ -53,7 +53,7 @@
 		</ul>
 
 		<div class="github">
-			<a class="github__anchor" href="https://github.com/mexkiv/malonebox" title="Github">Github</a>
+			<a class="github__anchor" href="https://github.com/flizeteam/malonebox.git" title="Github">Github</a>
 		</div>
 
 	</div>
